--- a/converter/.gitignore
+++ b/converter/.gitignore
@@ -174,6 +174,9 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+generated_python_files/
+generated_text_files/
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
